VPAT-267 Fixed text not wrapping correctly

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -236,6 +236,10 @@ pre {
   margin-bottom: 0;
 }
 
+.usa-prose > p {
+  max-width: 100% !important;
+}
+
 .stepper-row {
   display: flex;
   height: 8px; 
